tests/baselines/reference/parserIndexSignature4.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,3): error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts(2,4): error TS2304: Cannot find name 'a'.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature4.ts (2 errors) ====
    interface I {
      [a = 0] // Used to be indexer, now it is a computed property
      ~~~~~~~
!!! error TS1169: A computed property name in an interface must directly refer to a built-in symbol.
       ~
!!! error TS2304: Cannot find name 'a'.
    }